--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -41,14 +41,14 @@ linkTitle = "Carbyne Stack"
 		</div>
 	</div>
 	<div class="row justify-content-start">
-		<div class="col-6 text-center">
+		<div class="col-6">
 			<h3 class="font-weight-bolder">Federated to serve.</h3>
 			<p>Carbyne Stack federates cloud instances into multi-party virtual clouds that provide distributed
 				decentralized services for storing and processing secret-shared data. Clients can consume these services
 				to securely offload computations on sensitive data.
 			</p>
 		</div>
-		<div class="col-6 cs-feature-box-image">
+		<div class="col-6 text-center">
 			<img src="federation.png" width="500" />
 		</div>
 	</div>
