--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -28,10 +28,10 @@ linkTitle = "Carbyne Stack"
 {{< blocks/section color="white" type="section">}}
 <div class="container cs-feature-box">
 	<div class="row justify-content-start">
-		<div class="col-6 text-center">
-			<img src="coed.png" width="500" />
+		<div class="col-lg-6 text-center pb-sm-5 pb-5">
+			<img class="img-fluid" src="coed.png" alt="Two parties collaborating on sensitive data" />
 		</div>
-		<div class="col-6">
+		<div class="col-lg-6">
 			<h3 class="font-weight-bolder">Collaborative computing on encrypted data.</h3>
 			<p>Carbyne Stack relies on Secure Multiparty Computation (MPC) to keep data encrypted end-to-end: in
 				transit, at rest, and <span class="font-italic">in use</span>. By implementing a client-server MPC
@@ -41,22 +41,22 @@ linkTitle = "Carbyne Stack"
 		</div>
 	</div>
 	<div class="row justify-content-start">
-		<div class="col-6">
+		<div class="col-lg-6 pb-sm-5 pb-5">
 			<h3 class="font-weight-bolder">Federated to serve.</h3>
 			<p>Carbyne Stack federates cloud instances into multi-party virtual clouds that provide distributed
 				decentralized services for storing and processing secret-shared data. Clients can consume these services
 				to securely offload computations on sensitive data.
 			</p>
 		</div>
-		<div class="col-6 text-center">
-			<img src="federation.png" width="500" />
+		<div class="col-lg-6 text-center">
+			<img class="img-fluid" src="federation.png" alt="Two federated clouds exposing services to a client" />
 		</div>
 	</div>
 	<div class="row justify-content-start">
-		<div class="col-6 text-center">
-			<img src="stack.png" width="300" />
+		<div class="col-lg-6 text-center pb-sm-5 pb-5">
+			<img class="img-fluid" style="max-width: 300px;" src="stack.png" alt="Carbyne Stack technology stack" />
 		</div>
-		<div class="col-6">
+		<div class="col-lg-6">
 			<h3 class="font-weight-bolder">MPC born cloud native.</h3>
 			<p>Carbyne Stack rests on the shoulders of giants to lift Secure Multiparty Computation into the cloud:
 				Containerization and orchestration with Kubernetes, Istio for flexible routing, and Knative to deploy
