Reorder image and text in second row on small devices
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -41,15 +41,15 @@ linkTitle = "Carbyne Stack"
 		</div>
 	</div>
 	<div class="row justify-content-start">
-		<div class="col-lg-6 pb-sm-5 pb-5">
+		<div class="col-lg-6 text-center pb-sm-5 pb-5 order-lg-2">
+			<img class="img-fluid" src="federation.png" alt="Two federated clouds exposing services to a client" />
+		</div>
+		<div class="col-lg-6 order-lg-1">
 			<h3 class="font-weight-bolder">Federated to serve.</h3>
 			<p>Carbyne Stack federates cloud instances into multi-party virtual clouds that provide distributed
 				decentralized services for storing and processing secret-shared data. Clients can consume these services
 				to securely offload computations on sensitive data.
 			</p>
-		</div>
-		<div class="col-lg-6 text-center">
-			<img class="img-fluid" src="federation.png" alt="Two federated clouds exposing services to a client" />
 		</div>
 	</div>
 	<div class="row justify-content-start">
