Fixed copyright headers
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,15 +1,11 @@
-+++
-title = "Carbyne Stack"
-linkTitle = "Carbyne Stack"
-
-+++
-
-<!--
-  ~ Copyright (c) 2021 - for information on the respective copyright owner
-  ~ see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.io.
-  ~
-  ~ SPDX-License-Identifier: Apache-2.0
-  -->
+---
+copyright: >
+    Copyright (c) 2021 - for information on the respective copyright owner
+    see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.io.
+    SPDX-License-Identifier: Apache-2.0
+title: Carbyne Stack
+linkTitle: Carbyne Stack
+---
 
 {{< blocks/cover image_anchor="top" height="med" color="900" >}}
 <div class="text-left">
