Add Fathom tracking script and update privacy policy
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -4,7 +4,7 @@
   ~
   ~ SPDX-License-Identifier: Apache-2.0
   --->
-{% extends "base.html" %} {% block content %}
+{% extends "main.html" %} {% block content %}
 <link rel="stylesheet" href="{{ 'assets/stylesheets/home.css' | url }}"/>
 <div class="md-container">
     <section class="hero-section" style="background-color: black;">
