Embed tutorial video (#30)
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -16,6 +16,7 @@
                         applications.</h2>
                     <p style="display: block">
                         <a href="https://github.com/carbynestack" class="md-button">Get Involved</a>
+                        <a href="getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
                     </p>
                 </div>
             </div>
