Update logo with official one from UTS
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -29,7 +29,7 @@
                             />
                             <img
                                 src="images/uts-logo.png"
-                                class="used-by-logo"
+                                class="used-by-logo invert"
                                 alt="UTS Logo"
                                 draggable="false"
                             />
