Add logo banner and ecosystem community page (#38)
Resolves #32

Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -18,6 +18,23 @@
                         <a href="https://github.com/carbynestack" class="md-button">Get Involved</a>
                         <a href="getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
                     </p>
+                    <p>
+                        <h3 style="padding-top: 30px;">Used by</h3>
+                        <a href="community/ecosystem/" class="used-by-logo-banner">
+                            <img
+                                src="images/bosch-logo.png"
+                                class="used-by-logo"
+                                alt="Bosch Logo"
+                                draggable="false"
+                            />
+                            <img
+                                src="images/uts-logo.png"
+                                class="used-by-logo invert"
+                                alt="UTS Logo"
+                                draggable="false"
+                            />
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
