Links to discord server and community meetings
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -15,7 +15,12 @@
                     <h2>Carbyne Stack is an open-source cloud stack for building scalable Secure Multiparty Computation
                         applications.</h2>
                     <p style="display: block">
-                        <a href="https://github.com/carbynestack" class="md-button">Get Involved</a>
+                        <a href="https://discord.gg/8sxNPCSBDk" class="md-button">
+                            <span class="twemoji svg-icon-in-button">
+                                {% include ".icons/fontawesome/brands/discord.svg" %}
+                            </span>
+                            Join us on Discord
+                        </a>
                         <a href="getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
                     </p>
                     <p>
