Ignore all local and private IP ranges for analytics
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -7,5 +7,5 @@
 {% extends "base.html" %}
 
 {% block libs %}
-<script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" data-excluded-domains="localhost,127.0.0.1" defer></script>
+<script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" data-excluded-domains="localhost,10.*.*.*,127.*.*.*,172.16.*.*,192.168.*.*" defer></script>
 {% endblock %}
