--- a/overrides/home.html
+++ b/overrides/home.html
@@ -4,10 +4,12 @@
   ~
   ~ SPDX-License-Identifier: Apache-2.0
   --->
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %}
+{% block tabs %}
+{{ super() }}
 <link rel="stylesheet" href="{{ 'assets/stylesheets/home.css' | url }}"/>
 <div class="md-container">
-    <section class="hero-section" style="background-color: black;">
+    <section class="hero-section">
         <div class="md-grid md-typeset">
             <div class="mdx-hero">
                 <div>
@@ -44,6 +46,10 @@
             </div>
         </div>
     </section>
+</div>
+{% endblock %}
+{% block content %}
+<div class="mdx-container">
     <section class="image-with-text">
         <div class="md-grid md-typeset">
             <img
