Add announcement bar with upcoming events
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -9,3 +9,12 @@
 {% block libs %}
 <script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" data-excluded-domains="localhost,10.*.*.*,127.*.*.*,172.16.*.*,192.168.*.*" defer></script>
 {% endblock %}
+
+{% block announce %}
+<div class="announcement-bar">
+  Meet us at <a href="https://www.multipartycomputation.com/tpmpc-2022">TPMPC</a> (Aarhus, June),
+  at the <a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit North America</a>
+  (Austin, June) or at <a href="https://stackconf.eu/">StackConf</a> (Berlin, July). See the
+  <a href="community/events">events page</a> for more information.
+</div>
+{% endblock %}
