Enable allowed domains for fathom analytics to suppress dev traffic
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -6,11 +6,9 @@
   --->
 {% extends "base.html" %}
 
-<!--
 {% block libs %}
-<script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" data-excluded-domains="localhost,10.*.*.*,127.*.*.*,172.16.*.*,192.168.*.*" defer></script>
+<script src="https://holiday-van.carbynestack.io/script.js" data-site="CUNVUWEF" defer></script>
 {% endblock %}
--->
 
 {% block announce %}
 <div class="announcement-bar">
