Add HRI information (landing page banner and ecosystem entry)
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -26,16 +26,22 @@
                         <a href="getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
                     </p>
                     <p>
-                        <h3 style="padding-top: 30px;">Used by</h3>
+                        <h3 style="padding-top: 30px;">Contributors</h3>
                         <a href="community/ecosystem/" class="used-by-logo-banner">
                             <img
-                                src="images/bosch-logo.png"
+                                src="images/ecosystem/bosch-logo.png"
                                 class="used-by-logo"
                                 alt="Bosch Logo"
                                 draggable="false"
                             />
                             <img
-                                src="images/uts-logo.png"
+                                src="images/ecosystem/hri-logo.png"
+                                class="used-by-logo"
+                                alt="HRI Logo"
+                                draggable="false"
+                            />
+                            <img
+                                src="images/ecosystem/uts-logo.png"
                                 class="used-by-logo invert"
                                 alt="UTS Logo"
                                 draggable="false"
