Fix HRI logo and add anchors on ecosystem page
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -27,26 +27,32 @@
                     </p>
                     <p>
                         <h3 style="padding-top: 30px;">Contributors</h3>
-                        <a href="community/ecosystem/" class="used-by-logo-banner">
-                            <img
-                                src="images/ecosystem/bosch-logo.png"
-                                class="used-by-logo"
-                                alt="Bosch Logo"
-                                draggable="false"
-                            />
-                            <img
-                                src="images/ecosystem/hri-logo.png"
-                                class="used-by-logo"
-                                alt="HRI Logo"
-                                draggable="false"
-                            />
-                            <img
-                                src="images/ecosystem/uts-logo.png"
-                                class="used-by-logo invert"
-                                alt="UTS Logo"
-                                draggable="false"
-                            />
-                        </a>
+                        <div class="used-by-logo-banner">
+                            <a href="community/ecosystem/#bosch">
+                                <img
+                                    src="images/ecosystem/bosch-logo.png"
+                                    class="used-by-logo"
+                                    alt="Bosch Logo"
+                                    draggable="false"
+                                />
+                                </a>
+                            <a href="community/ecosystem/#hri">
+                                <img
+                                    src="images/ecosystem/hri-logo.png"
+                                    class="used-by-logo"
+                                    alt="HRI Logo"
+                                    draggable="false"
+                                />
+                                </a>
+                            <a href="community/ecosystem/#uts">
+                                <img
+                                    src="images/ecosystem/uts-logo.png"
+                                    class="used-by-logo invert"
+                                    alt="UTS Logo"
+                                    draggable="false"
+                                />
+                            </a>
+                        </div>
                     </p>
                 </div>
             </div>
