--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,9 +12,8 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  Meet us at <a href="https://www.multipartycomputation.com/tpmpc-2022">TPMPC</a> (Aarhus, June),
-  at the <a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit North America</a>
-  (Austin, June) or at <a href="https://stackconf.eu/">StackConf</a> (Berlin, July). See the
-  <a href="community/events">events page</a> for more information.
+  CarbyneStackConf '22 is coming. Join us on October 27th for a full day of knowledge exchange and
+  community building at the Connectory in Stuttgart, Germany. For more information and to register,
+  visit the <a href="/community/csc/overview/">CarbyneStackConf '22 conference page</a>.
 </div>
 {% endblock %}
