Add information that in-person registration is closed
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,8 +12,11 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackConf '22 is coming. Join us on October 27th for a full day of knowledge exchange and
-  community building at the Connectory in Stuttgart, Germany. For more information and to register,
-  visit the <a href="/community/csc/overview/">CarbyneStackConf '22 conference page</a>.
+  CarbyneStackConf '22 is just around the corner. We have over 60 registered attendees from more
+  than 30 organizations from around the world who will gather for a full day of knowledge exchange
+  and community building at the Connectory in Stuttgart, Germany on October 27th. Note that
+  registration for <b>in-person attendance is closed</b> but joining virtually is still possible. For
+  more information and to register, visit the <a href="/community/csc/overview/">CarbyneStackConf
+  '22 conference page</a>.
 </div>
 {% endblock %}
