Add information regarding CSC and GITSP
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -13,7 +13,7 @@
         <div class="md-grid md-typeset">
             <div class="mdx-hero">
                 <div>
-                    <h1>Cloud Native <br/> Secure Multiparty Computation</h1>
+                    <h1>Award-Winning Cloud Native <br/> Secure Multiparty Computation</h1>
                     <h2>Carbyne Stack is an open-source cloud stack for building scalable Secure Multiparty Computation
                         applications.</h2>
                     <p style="display: block">
