--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,11 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackConf '22 is just around the corner. We have over 60 registered attendees from more
-  than 30 organizations from around the world who will gather for a full day of knowledge exchange
-  and community building at the Connectory in Stuttgart, Germany on October 27th. Note that
-  registration for <b>in-person attendance is closed</b> but joining virtually is still possible. For
-  more information and to register, visit the <a href="/community/csc/overview/">CarbyneStackConf
-  '22 conference page</a>.
+  We are very proud that Carbyne Stack has won 3rd place at this year's German IT Security Award.
+  See <a href="/community/events/#german-it-security-award">here</a> for more information.
 </div>
 {% endblock %}
