Add Flower Summit '23 talk to event list
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,7 +12,9 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  We are very proud that Carbyne Stack has won 3rd place at this year's German IT Security Award.
-  See <a href="/community/events/#german-it-security-award">here</a> for more information.
+  Checkout our talk at Flower Summit '23 on Nettle, our take on
+  privacy-preserving Federated Learning with secure aggregation based on
+  Carbyne Stack. See <a href="/community/events/#flower-summit-23">here</a>
+  for more information.
 </div>
 {% endblock %}
