Add blog menu item and banner
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,9 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  Checkout our talk at Flower Summit '23 on Nettle, our take on
-  privacy-preserving Federated Learning with secure aggregation based on
-  Carbyne Stack. See <a href="/community/events/#flower-summit-23">here</a>
-  for more information.
+  Want to read more about Carbyne Stack? We just launched our
+  <a href="https://blog.carbynestack.io">Carbyne Stack Blog</a> on Medium. 
 </div>
 {% endblock %}
