Update Fathom embed script after deprecation of custum domains
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -7,7 +7,7 @@
 {% extends "base.html" %}
 
 {% block libs %}
-<script src="https://holiday-van.carbynestack.io/script.js" data-site="CUNVUWEF" defer></script>
+<script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" defer></script>
 {% endblock %}
 
 {% block announce %}
