Add SAP to landing and ecosystem pages
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -35,7 +35,7 @@
                                     alt="Bosch Logo"
                                     draggable="false"
                                 />
-                                </a>
+                            </a>
                             <a href="community/ecosystem/#hri">
                                 <img
                                     src="images/ecosystem/hri-logo.png"
@@ -43,7 +43,15 @@
                                     alt="HRI Logo"
                                     draggable="false"
                                 />
-                                </a>
+                            </a>
+                            <a href="community/ecosystem/#sap">
+                                <img
+                                    src="images/ecosystem/sap-logo.png"
+                                    class="used-by-logo"
+                                    alt="SAP Logo"
+                                    draggable="false"
+                                />
+                            </a>
                             <a href="community/ecosystem/#uts">
                                 <img
                                     src="images/ecosystem/uts-logo.png"
