docs: add CSC23 information
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,7 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  Want to read more about Carbyne Stack? We just launched our
-  <a href="https://blog.carbynestack.io">Carbyne Stack Blog</a> on Medium. 
+  CarbyneStackCon '23 is around the corner. For registration and more
+  information see <a href="/community/events/csc23/">here</a>. 
 </div>
 {% endblock %}
