--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 <!---
-  ~ Copyright (c) 2021 - for information on the respective copyright owner
+  ~ Copyright (c) 2021-2023 - for information on the respective copyright owner
   ~ see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
   ~
   ~ SPDX-License-Identifier: Apache-2.0
@@ -12,7 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackCon '23 is around the corner. For registration and more
-  information see <a href="/community/events/csc23/">here</a>. 
+  CarbyneStackCon '23 is around the corner. For more information see
+  <a href="/community/events/csc23/">here</a>. 
 </div>
 {% endblock %}
