docs: add links to talk recordings
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,7 +12,6 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackCon '23 is around the corner. For more information see
-  <a href="/community/events/csc23/">here</a>. 
+  CarbyneStackCon '23 <a href="/community/events/csc23/">talk recordings</a> are available. 
 </div>
 {% endblock %}
