fix: update tutorial src
Signed-off-by: Sebastian Becker <sebastian.becker@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -23,7 +23,7 @@
                             </span>
                             Join us on Discord
                         </a>
-                        <a href="getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
+                        <a href="documentation/getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
                     </p>
                     <p>
                         <h3 style="padding-top: 30px;">Contributors</h3>
