docs: add CDPG as contributor to landing and ecosystem page
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -60,6 +60,14 @@
                                     draggable="false"
                                 />
                             </a>
+                            <a href="community/ecosystem/#cdpg">
+                                <img
+                                    src="images/ecosystem/cdpg-logo.png"
+                                    class="used-by-logo"
+                                    alt="CDPG Logo"
+                                    draggable="false"
+                                />
+                            </a>
                         </div>
                     </p>
                 </div>
