docs: add Resolve as contributor to landing and ecosystem page
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -36,12 +36,28 @@
                                     draggable="false"
                                 />
                             </a>
+                            <a href="community/ecosystem/#cdpg">
+                                <img
+                                        src="images/ecosystem/cdpg-logo.png"
+                                        class="used-by-logo"
+                                        alt="CDPG Logo"
+                                        draggable="false"
+                                />
+                            </a>
                             <a href="community/ecosystem/#hri">
                                 <img
                                     src="images/ecosystem/hri-logo.png"
                                     class="used-by-logo"
                                     alt="HRI Logo"
                                     draggable="false"
+                                />
+                            </a>
+                            <a href="community/ecosystem/#resolve">
+                                <img
+                                        src="images/ecosystem/resolve-logo.png"
+                                        class="used-by-logo"
+                                        alt="Resolve Logo"
+                                        draggable="false"
                                 />
                             </a>
                             <a href="community/ecosystem/#sap">
@@ -57,14 +73,6 @@
                                     src="images/ecosystem/uts-logo.png"
                                     class="used-by-logo invert"
                                     alt="UTS Logo"
-                                    draggable="false"
-                                />
-                            </a>
-                            <a href="community/ecosystem/#cdpg">
-                                <img
-                                    src="images/ecosystem/cdpg-logo.png"
-                                    class="used-by-logo"
-                                    alt="CDPG Logo"
                                     draggable="false"
                                 />
                             </a>
