docs: add CSC24 information and banner
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,6 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackCon '23 <a href="/community/events/csc23/">talk recordings</a> are available. 
+  CarbyneStackCon '24 is around the corner. For registration and more
+  information see <a href="/community/events/csc24/">here</a>.
 </div>
 {% endblock %}
