docs: add Cybernetica as ecosystem member
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -42,6 +42,14 @@
                                     draggable="false"
                                 />
                             </a>
+                            <a href="community/ecosystem/#cybernetica">
+                                <img
+                                        src="images/ecosystem/cybernetica-logo.png"
+                                        class="used-by-logo"
+                                        alt="Cybernetica Logo"
+                                        draggable="false"
+                                />
+                            </a>
                             <a href="community/ecosystem/#cdpg">
                                 <img
                                         src="images/ecosystem/cdpg-logo.png"
