docs: add more prominent CSC24 header
Also:

- Improved rendering of images on landing page

- Removed button linking to Discord

Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -12,18 +12,24 @@
     <section class="hero-section">
         <div class="md-grid md-typeset">
             <div class="mdx-hero">
+                <div style="margin-bottom: 6em;">
+                    <h1>CarbyneStackCon '24 is just around the corner</h1>
+                    <h2>Join us for our annual community gathering in Renningen, Germany, November 27-28, 2024.</h2>
+                    <p style="display: block">
+                        <a href="community/events/csc24/" class="md-button">More Information</a>
+                        <a href="https://register.event-xp.com/" class="md-button md-button--primary" target="_blank">Register Now<sup>+</sup></a>
+                    </p>
+                    <p style="font-size: medium;">
+                        <sup>+</sup> Use redeem code <strong>CSC24</strong>
+                    </p>
+                    <img style="width: 100%;" alt="Bosch Research Headquarters" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/BoschRenningen-pjt.jpg/1280px-BoschRenningen-pjt.jpg">
+                </div>
                 <div>
                     <h1>Award-Winning Cloud Native <br/> Secure Multiparty Computation</h1>
                     <h2>Carbyne Stack is an open-source cloud stack for building scalable Secure Multiparty Computation
                         applications.</h2>
                     <p style="display: block">
-                        <a href="https://discord.gg/8sxNPCSBDk" class="md-button">
-                            <span class="twemoji svg-icon-in-button">
-                                {% include ".icons/fontawesome/brands/discord.svg" %}
-                            </span>
-                            Join us on Discord
-                        </a>
-                        <a href="documentation/getting-started/#tldr" class="md-button md-button--primary">Watch Tutorial Video</a>
+                        <a href="documentation/getting-started/#tldr" class="md-button">Watch Tutorial Video</a>
                     </p>
                     <p>
                         <h3 style="padding-top: 30px;">Contributors</h3>
@@ -91,7 +97,7 @@
             <img
                     class="left"
                     src="coed.png"
-                    style="width: 500px; height: auto;"
+                    style="width: 500px; max-width: 100%; height: auto;"
                     alt="Two parties collaborating on sensitive data"
                     draggable="false"
             />
@@ -109,6 +115,7 @@
         <div class="md-grid md-typeset">
             <img
                     class="right"
+                    style="width: 500px; max-width: 100%; height: auto;"
                     src="federation.png"
                     alt="Two federated clouds exposing services to a client"
                     draggable="false"
@@ -126,7 +133,7 @@
         <div class="md-grid md-typeset">
             <img
                     class="left"
-                    style="width: 300px; height: auto;"
+                    style="width: 300px; max-width: 100%; height: auto;"
                     src="stack.png"
                     alt="Carbyne Stack technology stack"
                     draggable="false"
