feat: mark csc24 registrationclosed
Signed-off-by: Sebastian Becker <sebastian.becker@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -12,7 +12,7 @@
 
 {% block announce %}
 <div class="announcement-bar">
-  CarbyneStackCon '24 is around the corner. For registration and more
-  information see <a href="/community/events/csc24/">here</a>.
+  CarbyneStackCon '24 is around the corner. For more information see
+  <a href="/community/events/csc24/">here</a>.
 </div>
 {% endblock %}
