--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 <!---
-  ~ Copyright (c) 2021-2023 - for information on the respective copyright owner
+  ~ Copyright (c) 2021-2025 - for information on the respective copyright owner
   ~ see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
   ~
   ~ SPDX-License-Identifier: Apache-2.0
@@ -11,10 +11,7 @@
 {% endblock %}
 
 {% block announce %}
-<!---
 <div class="announcement-bar">
-  CarbyneStackCon '24 is around the corner. For more information see
-  <a href="/community/events/csc24/">here</a>.
+   <a href="/community/events/csc24/">CarbyneStackCon '24</a> session recordings are available.
 </div>
--->
 {% endblock %}
