docs: change banner to highlight new project status
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -8,6 +8,6 @@
 
 {% block announce %}
 <div class="announcement-bar">
-   <a href="/community/events/csc24/">CarbyneStackCon '24</a> session recordings are available.
+   Carbyne Stack is now a Linux Foundation Europe Community Project!
 </div>
 {% endblock %}
