docs: update with changes related to LFE donation
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,16 +2,12 @@
   ~ Copyright (c) 2021-2025 - for information on the respective copyright owner
   ~ see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
   ~
-  ~ SPDX-License-Identifier: Apache-2.0
+  ~ SPDX-License-Identifier: CC-BY-4.0
   --->
 {% extends "base.html" %}
 
-{% block libs %}
-<script src="https://cdn.usefathom.com/script.js" data-site="CUNVUWEF" defer></script>
-{% endblock %}
-
 {% block announce %}
 <div class="announcement-bar">
-   <a href="/community/events/csc24/">CarbyneStackCon '24</a> session recordings are available.
+   Carbyne Stack is now a Linux Foundation Europe Community Project!
 </div>
 {% endblock %}
